# maintenance

./: .imdoneignore  imdone-readme.md  imdone-tasks.md
.imdone/: config.yml
docs/: api-docs.html  database.md  design.sketch  system_structure  system_structure.html  technical_requirements.md
docs/design/: design.sketch
src/client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
src/client/src/: styles.css
src/client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  const.ts  utils.ts
src/client/src/app/components/event-info/: event-info.component.html  event-info.component.ts
src/client/src/app/components/menu/: menu.component.ts
src/client/src/app/components/page-equip/: page-equip.component.html  page-equip.component.ts
src/client/src/app/components/page-equip-stat/: page-equip-stat.component.html  page-equip-stat.component.ts
src/client/src/app/components/page-equip/event-plan-cyclic/: event-plan-cyclic.component.html  event-plan-cyclic.component.ts
src/client/src/app/components/page-equip/event-plan-cyclic-edit/: event-plan-cyclic-edit.component.html  event-plan-cyclic-edit.component.ts
src/client/src/app/components/page-equips/: page-equips.component.html  page-equips.component.ts
src/client/src/app/components/page-objects/: page-objects.component.html  page-objects.component.ts
src/client/src/app/models/: equip.ts  event.ts  eventPlan.ts  eventType.ts  object.ts
src/client/src/app/services/: api.service.ts
src/server/: README.md  pyproject.toml
src/server/src/: main.py  seed_db.py  settings.py  simulator.py
src/server/src/db/: crud.py  database.py  models.py  schemas.py  seed_db.py
src/server/src/utils/: export_openapi.py
src/server/thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
